--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
             "html": "ignore",
             "custom": "ignore",
             "exceptions": [""]
-          }]
+          }],
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off"
     }
 }
