--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "moment": "^2.29.1",
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
