--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "moment": "^2.29.1",
+    "dayjs": "^1.9.6",
     "mongodb": "^3.6.3",
     "next": "10.0.2",
     "react": "17.0.1",
