--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb+srv://youtube:youtube@cluster0.etu2o.mongodb.net/youtube?retryWrites=true&w=majority
 MONGODB_DB=youtube
+GOOGLE_CLIENT_SECRET=E_2MUjNBlZ1yumU6ZxK-ck-Y
+GOOGLE_CLIENT_ID=299916268329-llkq1uva79uf20e53ipbcq0bvol9n5gs.apps.googleusercontent.com
+NEXTAUTH_URL=http://localhost:3000
