--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "next": "10.0.2",
+    "next-auth": "^3.1.0",
     "next-connect": "^0.9.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
